--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -23,7 +23,7 @@
   <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
   <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
 
-  <p class="lead" id="typewriteText"></p>
+  <p class="lead" id="typewriteText">Welcome to my website</p>
   
   <!-- uncomment/modify buttons as you want-->
   <div class="jumbotron-btns">
