--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -3,9 +3,14 @@ layout: default
 ---
 </div>
 <div class="container">
-   
-    <h2>Email</h2>
-    <p>patrickm@pgmja.com</p>
+    <div>
+
+        <br>
+        <br>
+        <br>
+<h2>Email:</h2>
+<p>patrickm@pgmja.com</p>
+    </div>
 </div>
 
 
