--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -119,31 +119,24 @@ layout: default
       <br />
       
 
-      {% for project in site.author_project_details %} {% if project.visibility
-      == true %}
-      <div class="row" id="project-card">
-        <div class="col-md-6">
-          <img
-            src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}"
-            class="project-img"
-          />
-        </div>
-
-        <div class="row">
-        <div class="col-md-4 center">
-          <h4 class="experience-title">{{ project.project_title }}</h4>
-          <h6 class="experience-info">{{ project.project_info}}</h6>
-          <p class="experience-desc">{{ project.project_description }}</p>
-          <p>
-            <a class="project-link" href="{{project.project_url}}"
-              >{{ project.project_url}}</a
-            >
-          </p>
-        </div>
-      </div>
-    </div>
-      <br />
-      {% endif %} {% endfor %}
+      {% for project in site.author_project_details %} 
+      {% if project.visibility == true %}
+       <div class="row" id="project-card">
+          <div class="col-md-6">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="project-img"/>
+          </div>
+      
+          <div class="col-md-6">
+            <h4 class="experience-title">{{ project.project_title }}</h4>
+            <h6 class="experience-info">{{ project.project_info}}</h6>
+            <p class="experience-desc">{{ project.project_description }}</p>
+            <p><a class="project-link" href="{{project.project_url}}">{{ project.project_url}}</a></p>
+          </div>
+       </div>
+       <br/>
+      {% endif %}
+      {% endfor %}
+      
     </div>
     {% endif %} {% if site.show_author_work_experiences == true %}
     <div class="card">
