--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,9 +1,9 @@
 <!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
 <!-- Languages  -->
-<figure><embed src="https://wakatime.com/share/@sujaykundu777/e4c2a44e-390d-41f3-a4c8-b23b05fbec30.svg"></embed></figure>
+<figure><embed src="https://wakatime.com/share/@018d3133-d1cc-4454-ad06-e4ca360a662d/bf8b7ef6-5691-4337-a662-a89bc8ad5306.svg"></embed></figure>
 
 <!-- Hours Coded -->
 <figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
+    <embed src="https://wakatime.com/share/@018d3133-d1cc-4454-ad06-e4ca360a662d/55629d1f-bd25-4028-9cce-0dff444bfaeb.svg"></embed>
 </figure>
