--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,9 +1,6 @@
 <!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
 <!-- Languages  -->
-<figure><embed src="https://wakatime.com/share/@018d3133-d1cc-4454-ad06-e4ca360a662d/bf8b7ef6-5691-4337-a662-a89bc8ad5306.svg"></embed></figure>
+<figure><embed src="https://wakatime.com/share/@patriziothedev/9957781c-e6ca-4ffb-8126-fe823455a279.svg"></embed></figure>
 
 <!-- Hours Coded -->
-<figure>
-    <embed src="https://wakatime.com/share/@018d3133-d1cc-4454-ad06-e4ca360a662d/55629d1f-bd25-4028-9cce-0dff444bfaeb.svg"></embed>
-</figure>
